--- a/wp-content/themes/new-school/src/markup/blocks/footer/footer.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/footer/footer.scss
@@ -3,7 +3,7 @@
 @import "../base/variables";
 @import "../base/media-queries";
 
-.header {
+.footer {
   height: 80px;
   background: var(--blue-color);
   color: var(--white-color);
