--- a/wp-content/themes/new-school/src/markup/blocks/img-block/img-block.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/img-block/img-block.scss
@@ -35,8 +35,8 @@
   &__block {
     position: relative;
     z-index: 1;
-    padding-top: 5.4vw;
-    height: 53.3vw;
+    padding-top: 84px;
+    height: calc(100vh - 150px);
   }
 
   &__title-wrapper {
@@ -45,14 +45,14 @@
   }
 
   &__title {
-    font-size: 7.8vw;
-    line-height: 5.5vw;
+    font-size: 102px;
+    line-height: 82px;
     font-weight: 700;
     filter: drop-shadow(3px 2px rgba(0, 0, 0, 0.5));
   }
 
   &__subtitle {
-    font-size: 3.92vw;
+    font-size: 51px;
     filter: drop-shadow(3px 2px rgba(0, 0, 0, 0.5));
   }
 
@@ -62,17 +62,18 @@
     background: var(--green-color);
     color: var(--white-color);
     position: absolute;
-    bottom: -3.23vw;
-    right: -0.78vw;
-    font-size: 2.76vw;
-    padding: 3.02vw 7.81vw;
+    bottom: 0;
+    right: -15px;
+    font-size: 34px;
+    padding: 35px 121px;
+    transform: translateY(50%);
 
     #{$small} & {
       position: static;
-      font-size: 2vw;
-      padding: 0.5vw 2.81vw;
+      font-size: 38px;
+      padding: 10px 54px;
       width: fit-content;
-      margin-top: 4vw;
+      margin-top: 76px;
     }
   }
 
@@ -86,36 +87,51 @@
 
 
     &--1 {
-      width: 13vw;
-      height: 10vw;
-      left: 55vw;
-      top: 11vw;
+      width: 172px;
+      height: 132px;
+      right: 267px;
+      top: 15vh;
       mask: url(../../../../images/triangle.svg);
       -webkit-mask: url(../../../../images/triangle.svg);
       @include mask-contain-center();
       transform: rotate(-18deg);
+
+      #{$small} & {
+        right: 90px;
+        top: 9vh;
+      }
     }
 
     &--2 {
-      width: 9vw;
-      height: 9vw;
-      left: 74vw;
-      top: 25vw;
+      width: 120px;
+      height: 120px;
+      right: 82px;
+      top: 36vh;
       mask: url(../../../../images/plus.svg);
       -webkit-mask: url(../../../../images/plus.svg);
       @include mask-contain-center();
       transform: rotate(-13deg);
+
+      #{$small} & {
+        right: 4px;
+        top: 36vh;
+      }
     }
 
     &--3 {
-      width: 7vw;
-      height: 7vw;
-      left: 51vw;
-      top: 32vw;
+      width: 95px;
+      height: 95px;
+      right: 415px;
+      top: 45vh;
       mask: url(../../../../images/square.svg);
       -webkit-mask: url(../../../../images/square.svg);
       @include mask-contain-center();
       transform: rotate(17deg);
+
+      #{$small} & {
+        right: 609px;
+        top: 40vh;
+      }
     }
   }
 }
