--- a/wp-content/themes/new-school/src/markup/blocks/img-text-block/img-text-block.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/img-text-block/img-text-block.scss
@@ -6,11 +6,11 @@
 .img-text-block {
 
   &__block {
-    padding-top: 7vw;
+    padding-top: 80px;
   }
 
   &__title {
-    margin-bottom: 2vw;
+    margin-bottom: 25px;
   }
 
   &__item {
@@ -23,9 +23,8 @@
 
   &__item-desc-text {
     @include font-calibri;
-    font-size: 2vw;
-    line-height: 2.9vw;
-    margin-bottom: 3vw;
+    font-size: 28px;
+    margin-bottom: 25px;
   }
 
   &__button {
@@ -33,8 +32,8 @@
     @include font-manrope;
     background: var(--green-color);
     color: var(--white-color);
-    font-size: 2vw;
-    padding: 0.5vw 2.81vw;
+    font-size: 28px;
+    padding: 7px 40px;
     width: fit-content;
   }
 
