--- a/wp-content/themes/new-school/src/markup/blocks/text-block/text-block.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/text-block/text-block.scss
@@ -4,11 +4,11 @@
 @import "../base/media-queries";
 
 .text-block {
-  padding-top: 9.5vw;
-  padding-bottom: 4.25vw;
+  padding-top: 120px;
+  padding-bottom: 60px;
 
   &__title {
-    margin-bottom: 1.2vw;
+    margin-bottom: 25px;
   }
 
   &__items {
@@ -16,8 +16,8 @@
 
   &__item {
     @include font-calibri;
-    margin-bottom: .8vw;
-    font-size: 2.4vw;
+    margin-bottom: 15px;
+    font-size: 28px;
   }
 
 }
